--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,9 @@
     <color name="colorPrimary">#02A7CF</color>
     <color name="colorPrimaryDark">#103A71</color>
     <color name="colorAccent">#FF5931</color>
+    <color name="black_overlay">#66000000</color>
+    <color name="white">#ffffff</color>
+    <color name="black">#000000</color>
+    <color name="light_gray">#a5a3a3</color>
+
 </resources>
